change the tepo

--- a/e.html
+++ b/e.html
@@ -31,7 +31,7 @@
         text-align: center;
         margin-top: 1rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         color: rgba(127, 255, 212, 0.676);
       }
       .portfolio_slider {
@@ -46,15 +46,15 @@
       }
       .text_bottom {
         color: rgb(255, 255, 255);
-        font-weight: 400;
-        background: rgba(127, 255, 212, 0.462);
+        font-weight: 500;
+        background: rgba(127, 255, 212, 0.253);
         padding: 0.5em;
         min-width: 100%;
         text-align: center;
         position: absolute;
         bottom: 2.5rem;
         left: 0;
-        font-size: 2rem;
+        font-size: 1.5rem;
         white-space: nowrap;
       }
       .slick-prev:before,
@@ -137,66 +137,15 @@
     <div class="gallery gallery-responsive portfolio_slider">
       <div class="inner">
         <img src="./images/3.jpeg" />
-        <div class="text_bottom">תנור וצ׳יפסר כפול וגם כיור</div>
+        <div class="text_bottom">333333333333</div>
       </div>
       <div class="inner">
         <img src="./images/4.jpeg" />
-        <div class="text_bottom">פטריות חימום על גז</div>
+        <div class="text_bottom">4444444444444</div>
       </div>
       <div class="inner">
         <img src="./images/5.jpeg" />
-        <div class="text_bottom">מקפיא מפלצת</div>
-      </div>
-      <div class="inner">
-        <img src="./images/6.jpeg" />
-        <div class="text_bottom">שירותים עם כניסה נפרדת</div>
-      </div>
-      <div class="inner">
-        <img src="./images/7.jpeg" />
-        <div class="text_bottom">תנור תעשייתי וסיר נירוסטה מיקצועי</div>
-      </div>
-
-      <div class="inner">
-        <img src="./images/8.jpeg" />
-        <div class="text_bottom">מבט מקדימה</div>
-      </div>
-      <div class="inner">
-        <img src="./images/9.jpeg" />
-        <div class="text_bottom">מבט מהצד</div>
-      </div>
-      <div class="inner">
-        <img src="./images/10.jpeg" />
-        <div class="text_bottom">מבט מאחורנית</div>
-      </div>
-      <div class="inner">
-        <img src="./images/11.jpeg" />
-        <div class="text_bottom">מבט מהצד השני</div>
-      </div>
-      <div class="inner">
-        <img src="./images/12.jpeg" />
-        <div class="text_bottom">תקריב מהקדימה</div>
-      </div>
-      <div class="inner">
-        <img src="./images/13.jpeg" />
-        <div class="text_bottom">מקלחת עם אריחי קרמיקה בצבע חול מדברי</div>
-      </div>
-      <div class="inner">
-        <img src="./images/14.jpeg" />
-        <div class="text_bottom">מחסן קטן לשמירת חפצים גדולים</div>
-      </div>
-      <div class="inner">
-        <img src="./images/15.jpeg" />
-        <div class="text_bottom">
-          מכונת קיצוץ וטחינה של ירקות ופירות תעשייתית מאיטליה שחבל על הזמן
-        </div>
-      </div>
-      <div class="inner">
-        <img src="./images/16.jpeg" />
-        <div class="text_bottom">סככה ענקית מפנקת טובה כנגד גשם ושמש</div>
-      </div>
-      <div class="inner">
-        <img src="./images/17.jpeg" />
-        <div class="text_bottom">מצלמות אבטחה ופנסי לד</div>
+        <div class="text_bottom">55555555555555</div>
       </div>
     </div>
 
