--- a/d.html
+++ b/d.html
@@ -31,8 +31,8 @@
         text-align: center;
         margin-top: 1rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 1.8rem;
-        color: rgba(127, 255, 212, 0.676);
+        font-size: 1.5rem;
+        color: white;
       }
       .portfolio_slider {
         margin: 1.25rem auto;
@@ -46,15 +46,14 @@
       }
       .text_bottom {
         color: rgb(255, 255, 255);
-        font-weight: 400;
-        background: rgba(127, 255, 212, 0.462);
+        background: rgba(127, 255, 212, 0.253);
         padding: 0.5em;
         min-width: 100%;
         text-align: center;
         position: absolute;
-        bottom: 2.5rem;
+        bottom: 0;
         left: 0;
-        font-size: 2rem;
+        font-size: 1.5rem;
         white-space: nowrap;
       }
       .slick-prev:before,
@@ -67,6 +66,13 @@
         width: 2.5rem;
         height: 2.5rem;
         z-index: 1;
+        background: rgba(
+          127,
+          255,
+          212,
+          0.253
+        ); /* Matching text_bottom background */
+        border-radius: 50%; /* Optional: makes arrows circular */
       }
       .slick-prev {
         left: 0.9375rem;
@@ -84,17 +90,18 @@
         height: auto;
         max-height: 80vh;
       }
-      /* Style for dots - positioned lower */
+      /* Style for dots */
       .slick-dots {
-        bottom: 0.3125rem; /* 5px from bottom - even lower than before */
-        padding-bottom: 0; /* Remove any extra padding */
+        bottom: 0.625rem; /* Position dots near bottom - 10px */
       }
       .slick-dots li button:before {
-        font-size: 0.75rem;
-        color: rgba(127, 255, 212, 0.664);
+        font-size: 0.75rem; /* Dot size - 12px */
+        color: white; /* Dot color */
+        opacity: 0.5; /* Inactive dot opacity */
       }
       .slick-dots li.slick-active button:before {
-        color: rgba(127, 255, 212, 0.874);
+        opacity: 1; /* Active dot opacity */
+        color: white; /* Active dot color */
       }
 
       /* Media query for smaller screens */
@@ -124,10 +131,10 @@
           right: 0.625rem;
         }
         .slick-dots {
-          bottom: 0.25rem; /* 4px from bottom on mobile */
+          bottom: 0.5rem; /* Adjust dot position for mobile */
         }
         .slick-dots li button:before {
-          font-size: 0.625rem;
+          font-size: 0.625rem; /* Smaller dots on mobile - 10px */
         }
       }
     </style>
@@ -137,66 +144,15 @@
     <div class="gallery gallery-responsive portfolio_slider">
       <div class="inner">
         <img src="./images/3.jpeg" />
-        <div class="text_bottom">תנור וצ׳יפסר כפול וגם כיור</div>
+        <div class="text_bottom">333333333333</div>
       </div>
       <div class="inner">
         <img src="./images/4.jpeg" />
-        <div class="text_bottom">פטריות חימום על גז</div>
+        <div class="text_bottom">4444444444444</div>
       </div>
       <div class="inner">
         <img src="./images/5.jpeg" />
-        <div class="text_bottom">מקפיא מפלצת</div>
-      </div>
-      <div class="inner">
-        <img src="./images/6.jpeg" />
-        <div class="text_bottom">שירותים עם כניסה נפרדת</div>
-      </div>
-      <div class="inner">
-        <img src="./images/7.jpeg" />
-        <div class="text_bottom">תנור תעשייתי וסיר נירוסטה מיקצועי</div>
-      </div>
-
-      <div class="inner">
-        <img src="./images/8.jpeg" />
-        <div class="text_bottom">מבט מקדימה</div>
-      </div>
-      <div class="inner">
-        <img src="./images/9.jpeg" />
-        <div class="text_bottom">מבט מהצד</div>
-      </div>
-      <div class="inner">
-        <img src="./images/10.jpeg" />
-        <div class="text_bottom">מבט מאחורנית</div>
-      </div>
-      <div class="inner">
-        <img src="./images/11.jpeg" />
-        <div class="text_bottom">מבט מהצד השני</div>
-      </div>
-      <div class="inner">
-        <img src="./images/12.jpeg" />
-        <div class="text_bottom">תקריב מהקדימה</div>
-      </div>
-      <div class="inner">
-        <img src="./images/13.jpeg" />
-        <div class="text_bottom">מקלחת עם אריחי קרמיקה בצבע חול מדברי</div>
-      </div>
-      <div class="inner">
-        <img src="./images/14.jpeg" />
-        <div class="text_bottom">מחסן קטן לשמירת חפצים גדולים</div>
-      </div>
-      <div class="inner">
-        <img src="./images/15.jpeg" />
-        <div class="text_bottom">
-          מכונת קיצוץ וטחינה של ירקות ופירות תעשייתית מאיטליה שחבל על הזמן
-        </div>
-      </div>
-      <div class="inner">
-        <img src="./images/16.jpeg" />
-        <div class="text_bottom">סככה ענקית מפנקת טובה כנגד גשם ושמש</div>
-      </div>
-      <div class="inner">
-        <img src="./images/17.jpeg" />
-        <div class="text_bottom">מצלמות אבטחה ופנסי לד</div>
+        <div class="text_bottom">55555555555555</div>
       </div>
     </div>
 
@@ -205,7 +161,7 @@
     <script>
       $(document).ready(function () {
         $('.gallery-responsive').slick({
-          dots: true,
+          dots: true, // Enable dots
           infinite: true,
           speed: 600,
           slidesToShow: 1,
