change color text

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         position: relative;
       }
       .text_bottom {
-        color: rgb(255, 255, 255);
+        color: rgb(2, 0, 0);
         font-weight: 400;
         background: rgba(127, 255, 212, 0.462);
-        padding: 0.5em;
+        padding: 0.2em;
         min-width: 100%;
         text-align: center;
         position: absolute;
@@ -86,7 +86,7 @@
       }
       /* Style for dots - positioned lower */
       .slick-dots {
-        bottom: 0.3125rem; /* 5px from bottom - even lower than before */
+        bottom: 0.1rem; /* 5px from bottom - even lower than before */
         padding-bottom: 0; /* Remove any extra padding */
       }
       .slick-dots li button:before {
@@ -187,7 +187,7 @@
       <div class="inner">
         <img src="./images/15.jpeg" />
         <div class="text_bottom">
-          מכונת קיצוץ וטחינה של ירקות ופירות תעשייתית מאיטליה שחבל על הזמן
+          מכונת קיצוץ וטחינה של ירקות ופירות תעשייתית מאיטליה
         </div>
       </div>
       <div class="inner">
