--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"
     />
-    <link
-      rel="shortcut icon"
-      href="./images/favicon (4).ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick-theme.css"
