add meta pic and secription

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="גלרית חומוס עין כרמל" />
+    <meta property="og:description" content="גלריה מדהימה של תמונות!!!" />
+    <meta
+      property="og:image"
+      content="https://dandindan.github.io/hummus/images/8.jpeg"
+    />
+    <meta property="og:url" content="https://dandindan.github.io/hummus/" />
     <title>hummus gallery</title>
     <link
       rel="stylesheet"
